deploy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: hello-kubernetes
  name: hello-kubernetes-ingress
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: hello-kubernetes-hello-kubernetes
            port:
              number: 80
        path: /hello-world(/|$)(.*)
